fix images not showing

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -113,12 +113,6 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
-
-[data-theme='light'] img[src$='#gh-light-mode-only'],
-[data-theme='dark'] img[src$='#gh-dark-mode-only'] {
-  display: none;
-}
-
 article {
   max-width: 700px;
 
